// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <ArticleParagraph>
          his being Black History Month, last week
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <View
            style={
              Object {
                "height": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <RCTWebView
                style={
                  Object {
                    "flex": 1,
                    "height": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#006699",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 25,
              "marginTop": 0,
              "textDecorationLine": "underline",
            }
          }
        >
          Some Link
        </Text>
      </View>
      <View>
        <ArticleParagraph>
          Some content
        </ArticleParagraph>
      </View>
      <View>
        <View>
          <PullQuote />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": "100%",
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FF0000",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "marginBottom": 20,
              }
            }
          >
            EXAMPLE TITLE
          </Text>
          <View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Example bullet text
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                An example 
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  link
                </Text>
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                More example text.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Example text 
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  this is bold 
                </Text>
                <Text
                  style={
                    Object {
                      "fontStyle": "italic",
                    }
                  }
                >
                  this is in italics.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</Ad>
`;

exports[`2. article with header 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FF0000",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "marginBottom": 20,
              }
            }
          >
            NEW BREXIT REFERENDUM
          </Text>
          <View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Another ministerial aide, 
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Robert Courts
                </Text>
                , resigned saying that he could not look himself in the mirror if he backed the Chequers proposals.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Downing Street and Conservative Party bosses were seeking to assess the scale of a grassroots rebellion.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife "at least four times" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Chuka Umunna, leader of the 
                <Text
                  style={
                    Object {
                      "fontStyle": "italic",
                    }
                  }
                >
                  Labour Remainers
                </Text>
                , dismissed Mrs May’s 
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  compromise
                </Text>
                 as “anti-worker and anti-business” and said that it would “royally screw” Britain’s service sector.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
          <Text
            style={
              Object {
                "color": "#006699",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 17,
                "lineHeight": 26,
                "marginBottom": 25,
                "marginTop": 0,
                "textDecorationLine": "underline",
              }
            }
          >
            police disclosure of evidence
          </Text>
          <Text
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
             Telegraph 
          </Text>
          last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            When Thatcher joined the campaign trail for the 2001 general election...
          </Text>
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": "100%",
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
          </Text>
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": "100%",
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption secondary
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View>
        <ArticleParagraph>
          When Thatcher joined the campaign trail for the 2001 general election, she was followed closely by the media. After several minor strokes, however, it was announced in 2002 that she would cut back her heavy schedule. 
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <View
            style={
              Object {
                "height": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <RCTWebView
                style={
                  Object {
                    "flex": 1,
                    "height": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          Thatcher plainly admired the style and determination of Tony Blair, who crushed John Major’s Conservatives in the 1997 election, and he for his part seemed content from time to time to be compared with her as a strong leader. She regularly revisited some of the issues that had dominated her years in office; for example she gave strong support to the development of democracy and the protection of the rule of law in Hong Kong as promised in the treaty she had signed with China. In 1999, in her first conference speech since her resignation as leader, she defended General Augusto Pinochet, the former dictator of Chile, who was held in Britain after his arrest in 1998. 
        </ArticleParagraph>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</Ad>
`;

exports[`3. an empty article 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FF0000",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "marginBottom": 20,
              }
            }
          >
            NEW BREXIT REFERENDUM
          </Text>
          <View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Another ministerial aide, 
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Robert Courts
                </Text>
                , resigned saying that he could not look himself in the mirror if he backed the Chequers proposals.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Downing Street and Conservative Party bosses were seeking to assess the scale of a grassroots rebellion.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife "at least four times" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginBottom": 20,
                  "paddingLeft": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FF0000",
                    "height": 8,
                    "top": 2,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 8,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 16,
                    "lineHeight": 27,
                    "marginTop": -8,
                    "paddingLeft": 15,
                    "width": "95%",
                  }
                }
              >
                Chuka Umunna, leader of the 
                <Text
                  style={
                    Object {
                      "fontStyle": "italic",
                    }
                  }
                >
                  Labour Remainers
                </Text>
                , dismissed Mrs May’s 
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  compromise
                </Text>
                 as “anti-worker and anti-business” and said that it would “royally screw” Britain’s service sector.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
          <Text
            style={
              Object {
                "color": "#006699",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 17,
                "lineHeight": 26,
                "marginBottom": 25,
                "marginTop": 0,
                "textDecorationLine": "underline",
              }
            }
          >
            police disclosure of evidence
          </Text>
          <Text
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
             Telegraph 
          </Text>
          last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            When Thatcher joined the campaign trail for the 2001 general election...
          </Text>
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": "100%",
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
          </Text>
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": "100%",
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption secondary
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View>
        <ArticleParagraph>
          When Thatcher joined the campaign trail for the 2001 general election, she was followed closely by the media. After several minor strokes, however, it was announced in 2002 that she would cut back her heavy schedule. 
        </ArticleParagraph>
      </View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <View
            style={
              Object {
                "height": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <RCTWebView
                style={
                  Object {
                    "flex": 1,
                    "height": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View>
        <ArticleParagraph>
          Thatcher plainly admired the style and determination of Tony Blair, who crushed John Major’s Conservatives in the 1997 election, and he for his part seemed content from time to time to be compared with her as a strong leader. She regularly revisited some of the issues that had dominated her years in office; for example she gave strong support to the development of democracy and the protection of the rule of law in Hong Kong as promised in the treaty she had signed with China. In 1999, in her first conference speech since her resignation as leader, she defended General Augusto Pinochet, the former dictator of Chile, who was held in Britain after his arrest in 1998. 
        </ArticleParagraph>
      </View>
      <View>
        <View>
          <ArticleImage />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</Ad>
`;
